Fixed the control buttons that were stuck at the top

--- a/main_styles.css
+++ b/main_styles.css
@@ -6,16 +6,13 @@
 }
 
 html,body{
-    height : 100%;
     background-color: #f5f5f5;
+    height : 100vh;
 }
 
 .main-container{
     width : 100%;
-    position:absolute;
-    top : 50%;
-    left : 50%;
-    transform: translate(-50%,-50%);
+    position: relative;
     padding : 15px 10px;
 }
 
@@ -33,6 +30,7 @@ html,body{
 .container-body{
     display:flex;
     justify-content: space-between;
+    height : 40vh;
 }
 
 .container-body button{
@@ -56,17 +54,21 @@ html,body{
 }
 
 .testimonial{
-    border : 2px solid teal;
-    border-radius: 8px;
     flex : 0.95;
+    position: relative;
+    height : 100%;
 }
 
 .test {
-    position : relative;
+    position : absolute;
+    top : 0;
+    left : 0;
     padding : 15px 8px;
     display : flex;
     flex-direction: column;
     align-items: center;
+    border : 2px solid teal;
+    border-radius: 8px;
 }
 
 .test img{
